syntax = "proto3";

package task;

option go_package = "github.com/devpablocristo/golang-examples/grpc/todo/task";

message NewTask {
    string task = 1;
}

message Task {
    string task = 1;
    int32 id = 2;
}

service TodoList {
    rpc CreateNewTask(NewTask) returns (Task) {}
}